added event details page

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,3 @@
 browser=Chrome.INTEGRATED
-file.reference.MobileApp-config=/Applications/XAMPP/htdocs/MobileApp/config
-file.reference.MobileApp-public_html=/Applications/XAMPP/htdocs/MobileApp/public_html
-file.reference.MobileApp-test=/Applications/XAMPP/htdocs/MobileApp/test
+external.project.url=
+server=INTERNAL
