--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,9 @@
-auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
-config.folder=${file.reference.MobileApp-config}
-file.reference.MobileApp-config=config
-file.reference.MobileApp-public_html=public_html
-file.reference.MobileApp-test=test
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
+config.folder=
+file.reference.htdocs-LocalApp_JqueryMobile=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.MobileApp-public_html}
-test.folder=${file.reference.MobileApp-test}
+site.root.folder=${file.reference.htdocs-LocalApp_JqueryMobile}
+start.file=public_html/index.html
+test.folder=
+web.context.root=/LocalApp_JqueryMobile
